--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -72,3 +72,55 @@
     url = {https://ggplot2.tidyverse.org},
   }
 
+
+ @misc{har, 
+ url={https://dataverse.scholarsportal.info/file.xhtml?fileId=74089&amp;version=1.0},
+ journal={HS_JPvars-only_11jan2019_complete-cases-only.tab - UBC Research Data Collection}} 
+
+
+@Manual{dplyr,
+    title = {dplyr: A Grammar of Data Manipulation},
+    author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+    year = {2021},
+    note = {R package version 1.0.7},
+    url = {https://CRAN.R-project.org/package=dplyr},
+  }
+  
+   @Manual{patch,
+    title = {patchwork: The Composer of Plots},
+    author = {Thomas Lin Pedersen},
+    year = {2020},
+    note = {R package version 1.1.1},
+    url = {https://CRAN.R-project.org/package=patchwork},
+  }
+
+@manual{cfi, 
+title={Multiple linear regression}, 
+url={https://corporatefinanceinstitute.com/resources/knowledge/other/multiple-linear-regression/}, 
+journal={Corporate Finance Institute}, 
+author={CFI, Education inc.}, 
+year={2022}, 
+month={Feb}} 
+
+@manual{VIF, 
+title={Variance inflation factor}, 
+url={https://www.statisticshowto.com/variance-inflation-factor/}, 
+journal={Statistics How To}, 
+author={Stephanie}, 
+year={2020}, 
+month={Dec}} 
+
+
+@Manual{extra,
+    title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
+    author = {Hao Zhu},
+    year = {2021},
+    note = {R package version 1.3.4},
+    url = {https://CRAN.R-project.org/package=kableExtra},
+  }
+  
+   @misc{american, 
+   title={Self-efficacy teaching tip sheet}, 
+   url={https://www.apa.org/pi/aids/resources/education/self-efficacy}, 
+   journal={American Psychological Association}, 
+   publisher={American Psychological Association}} 
